--- a/src/assets/styles/varibles.styl
+++ b/src/assets/styles/varibles.styl
@@ -3,3 +3,5 @@
 $bgColor = #00bcd4;
 $iconDescHeight = .44rem
 $darkTextColor = #333;
+$spacing = .2rem;  // icon图片的间距 && “热销推荐”与icons的间距
+$recommendItemPadding = .1rem  // “热销推荐”中，img 与 info 的 padding
