--- a/src/assets/styles/varibles.styl
+++ b/src/assets/styles/varibles.styl
@@ -6,4 +6,6 @@ $darkTextColor = #333;
 $spacing = .2rem;  // icon图片的间距 && “热销推荐”与icons的间距
 $recommendItemPadding = .1rem  // “热销推荐”中，img 与 info 的 padding
 $headerHeight = .86rem  // header 的高度
+$searchHeight = .72rem  // 搜索框的高度
 $backIconFontSize = .4rem  // header 中，返回按钮的字体大小
+$alphabetWidth = .4rem  // 字母索引的宽度
