add detail's header animation

--- a/src/assets/styles/varibles.styl
+++ b/src/assets/styles/varibles.styl
@@ -9,3 +9,5 @@ $headerHeight = .86rem  // header 的高度
 $searchHeight = .72rem  // 搜索框的高度
 $backIconFontSize = .4rem  // header 中，返回按钮的字体大小
 $alphabetWidth = .4rem  // 字母索引的宽度
+$headerFontSize = 0.32rem; // header 中，文字的字体大小
+$backIconWidth = 0.64rem; // header 中，返回按钮的宽度
